kubernetes/applications/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  namespace: ai
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ai.apps.lab.sirnotethan.uk
      secretName: apps-prod-wildcard-tls
  rules:
    - host: ai.apps.lab.sirnotethan.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 80
